[package]
name = "openv"
version = "0.1.0"
authors = ["Kohei Morita <mrtc0@ssrf.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
base64 = "0.13.0"
clap = "3.0.0-beta.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
