[package]
name = "openv"
version = "0.1.0"
authors = ["Kohei Morita <mrtc0@ssrf.in>"]
edition = "2018"
homepage = "https://github.com/mrtc0/openv"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.37"
base64 = "0.13.0"
clap = "3.0.0-beta.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"

[dev-dependencies]
mockall = "0.9.0"
