[package]
name = "openv"
version = "0.1.0"
authors = ["Kohei Morita <mrtc0@ssrf.in>"]
edition = "2018"
homepage = "https://github.com/mrtc0/openv"
license = "Apache-2.0"
description = "A tool that uses the credentials stored in 1password as an environment variable."

[dependencies]
anyhow = "1.0.37"
base64 = "0.13.0"
base64-url = "1.4.8"
clap = "3.0.0-beta.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.158"
serde_json = "1.0.62"

[dev-dependencies]
mockall = "0.9.1"
